<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/Linear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/Image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:background="@drawable/withoutshadow" />
        <TextView
            android:id="@+id/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="@dimen/textSixe" />

        <TextView
            android:id="@+id/Textsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/aravali_international"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textSixe" />

        <TextView
            android:id="@+id/Textthree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/school"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textSixe" />
    </LinearLayout>







    <!--<LinearLayout-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:gravity="center"-->
        <!--android:layout_gravity="center">-->

        <!--<ImageView-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="90dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:src="@drawable/splashlogo"-->
            <!--android:scaleType="fitXY"/>-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:gravity="center"-->
        <!--android:layout_gravity="center">-->

        <!--<ImageView-->
            <!--android:layout_width="250dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:src="@drawable/logoname"-->
            <!--android:scaleType="fitXY"/>-->

    <!--</LinearLayout>-->

</RelativeLayout>