<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/Linear_topbg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/login_top_bg"/>
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/Image_logo"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"/>
        </RelativeLayout>

        <ScrollView
            android:layout_below="@id/Linear_topbg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Large"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif"
                        android:layout_marginBottom="20dp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/custom_button"
                            android:orientation="horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="10dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/user"
                                android:layout_gravity="center"
                                android:scaleType="fitXY"
                                android:padding="5dp"/>
                            <EditText
                                android:id="@+id/etAdmissionNo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/login_user_hint"
                                android:textColorHint="@color/hint_color"
                                android:textColor="@color/hint_color"
                                android:layout_gravity="center"
                                android:inputType="text"
                                android:maxLines="1"
                                android:maxLength="16"
                                android:imeOptions="actionNext"
                                android:background="@android:color/transparent"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/custom_button"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="10dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/password"
                                android:layout_gravity="center"
                                android:scaleType="fitXY"
                                android:padding="5dp"/>
                            <EditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/login_pass_hint"
                                android:textColorHint="@color/hint_color"
                                android:textColor="@color/hint_color"
                                android:layout_gravity="center"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:maxLength="15"
                                android:imeOptions="actionDone"
                                android:background="@android:color/transparent"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llsignIn"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/loginyellow"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/button_text_color"
                                android:text="@string/login"
                                android:layout_gravity="center"
                                android:gravity="center"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>